Fix alignment issues with summary getting cut of

--- a/frontend/src/app/order-completion/order-completion.component.scss
+++ b/frontend/src/app/order-completion/order-completion.component.scss
@@ -56,3 +56,12 @@ mat-header-cell {
 .tweet-logo {
   height: 24px;
 }
+
+.table-container {
+  // without setting it to auto, angular material limit the height and cuts off the table
+  --mat-table-footer-container-height: auto;
+}
+
+.bonus-point-container {
+  margin-top: 16px;
+}
